--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-HOST=mailtoteam.cr46cco4kmy9.af-south-1.rds.amazonaws.com
+HOST=13.247.64.31
 DATABASE=mailtoteam
 USER=admin
 PASSWORD=mailtoteam2001
