server side programming

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-HOST=13.247.64.31
+HOST=localhost
 DATABASE=mailtoteam
-USER=admin
 PASSWORD=mailtoteam2001
+USER=admin
 DBPORT=3306
 SERVERPORT=4000
