--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "googleapis": "^133.0.0",
+    "mysql2": "^3.9.2",
     "nodemailer": "^6.9.9"
   }
 }
